<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00897B"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="811dp"
        android:layout_height="1089dp"
        android:rotation="0"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/tesla"
        tools:layout_editor_absoluteX="-125dp"
        tools:layout_editor_absoluteY="-180dp" />

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="647dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:text="@string/display_main"
            android:textAlignment="center"
            android:textColor="#FDFCFC"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginPantalla"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="#7CFFFFFF"
                android:onClick="login"
                android:text="@string/btn_login" />

        </LinearLayout>

        <Button
            android:id="@+id/registerPantalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#79FFFFFF"
            android:onClick="register"
            android:text="@string/btn_register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>